assets/styles/modules/navbar.scss
// Navbar
#navbar-main {
  margin: 0;
  border: none;
  border-radius: 0;

  @media (max-width: #{$screen-tablet}) {
    padding-right: 0;
    padding-left: 0;
  }

  @media (min-width: #{$screen-desktop}) {
    height: 100px;
  }

  .container {
    padding: 0 15px;
  }

  .block-menu {
    margin-left: auto;

    li {
      padding: 0 11px;

      @media (min-width: #{$screen-desktop}) {
        padding: 0 5px;
      }

      @media (min-width: #{$screen-lg-desktop}) {
        padding: 0 11px;
      }

      a {
        padding: 0;

        @media (min-width: #{$screen-desktop}) {
          font-size: 15px;
        }

        @media (min-width: #{$screen-lg-desktop}) {
          font-size: 16px;
        }

        &:hover,
        &:focus {
          text-decoration: underline;
          background-color: transparent;
        }
      }
    }
  }
}

// Dropdown toggle
.dropdown {
  .dropdown-toggle {
    &:after {
      background: url(../images/arrow-down-blue.svg) no-repeat center center;
      margin-left: 3px;
      width: 14px;
      height: 14px;
      vertical-align: middle;
      border: none;
    }
  }
  &.show {
    .dropdown-toggle:after {
      transform: rotate(180deg);
    }
  }
}

.dropdown.active > a {
  font-weight: 600;
}

.dropdown-menu {
  .dropdown-item:hover,
  .dropdown-item:focus,
  .dropdown-item.active {
    background-color: inherit;
  }

  .dropdown-item.active > a {
    font-weight: 600;
  }

  li.dropdown-item > a {
    display: block;
    padding: 2px 0 !important;
  }

  @media (max-width: #{$screen-desktop}) {
    border: none;
    padding-top: 0px;
  }
  @media (min-width: #{$screen-desktop}) {
    box-shadow: 0px 2px 20px rgba(0,0,0,0.25) !important;
  }

  padding: 20px 15px;
}

.dropdown-header {
  font-weight: 700;
}
// Logo
.navbar-brand {
  height: auto;
  padding: 0;
  margin-left: 0 !important;
  margin-right: 10px;

  img {
    max-width: 110px;
    height: auto;

    @media (min-width: #{$screen-desktop}) {
      max-width: 135px;
    }

    @media (min-width: #{$screen-lg-desktop}) {
      max-width: 153px;
    }
  }
}

// Mobile navbar
body.toggled {
  right: 0;

  .btn-close {
    display: none;
  }

  .overlay {
    top: 60px;
  }
}

#CollapsingNavbar {
  @media (max-width: #{$screen-desktop}) {
    &.navbar-collapse nav.block-menu:not(:last-of-type) li.nav-item:last-of-type {
      border-bottom: 1px solid #{$cold-grey-01};
      padding-bottom: 10px !important;
    }
  }
  .nav > a.nav-link {
    padding-left: 11px;
  }
}

// Search icon
#block-searchicon {
  @media (max-width: #{$screen-desktop}) {
    order: 2;
    margin-left: auto;
  }

  a {
    background: url(../images/search_icon.svg) no-repeat center center;
    width: 20px;
    height: 20px;
    float: left;
    padding-left: 43px;
    text-indent: -9999px;
  }

  p {
    margin: 0;
  }
}

// External links in menu
#navbar-main {
  .dropdown {
    ul.dropdown-menu {
      li {
        a.ext-link {
          display: inline;
          background: url(../images/external-link_icon.svg) no-repeat right center;
          background-size: 12px;
          padding-right: 20px;
        }
      }
    }
  }
}

// Fix invisible toggler icon see barrio bugs
.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navbar-toggler {
  &.collapsed {
    transition: 250ms ease-in;
  }
  &:not(.collapsed) {
    background-color: #{$subtle-grey-01};
    transition: 250ms ease-in-out;
  }
}

